Multiple ipynb created in src folder

--- a/notebooks/dprk_missile_stats.ipynb
+++ b/notebooks/dprk_missile_stats.ipynb
@@ -45,6 +45,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Test DataFrame"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 89,
    "metadata": {},
@@ -204,123 +211,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 95,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Date</th>\n",
-       "      <th>Missile Name</th>\n",
-       "      <th>Missile Type</th>\n",
-       "      <th>Facility Name</th>\n",
-       "      <th>Facility Location</th>\n",
-       "      <th>Facility Latitude</th>\n",
-       "      <th>Facility Longitude</th>\n",
-       "      <th>Landing Location</th>\n",
-       "      <th>Distance Travelled</th>\n",
-       "      <th>Confirmation Status</th>\n",
-       "      <th>Test Outcome</th>\n",
-       "      <th>Year</th>\n",
-       "      <th>Month_Number</th>\n",
-       "      <th>Month</th>\n",
-       "      <th># of Test</th>\n",
-       "      <th>YYYYMM</th>\n",
-       "      <th>Frequencies</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>F1</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>245</th>\n",
-       "      <td>2023-04-12</td>\n",
-       "      <td>Hwasong-18</td>\n",
-       "      <td>ICBM</td>\n",
-       "      <td>Samsok ICBM test site</td>\n",
-       "      <td>Samsok District, Pyongyang</td>\n",
-       "      <td>39.112</td>\n",
-       "      <td>125.998</td>\n",
-       "      <td>Sea of Japan or East Sea</td>\n",
-       "      <td>1000.0</td>\n",
-       "      <td>Confirmed</td>\n",
-       "      <td>Success</td>\n",
-       "      <td>2023</td>\n",
-       "      <td>4</td>\n",
-       "      <td>Apr</td>\n",
-       "      <td>1</td>\n",
-       "      <td>202304</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "          Date Missile Name Missile Type          Facility Name  \\\n",
-       "F1                                                                \n",
-       "245 2023-04-12   Hwasong-18         ICBM  Samsok ICBM test site   \n",
-       "\n",
-       "              Facility Location  Facility Latitude  Facility Longitude  \\\n",
-       "F1                                                                       \n",
-       "245  Samsok District, Pyongyang             39.112             125.998   \n",
-       "\n",
-       "             Landing Location  Distance Travelled Confirmation Status  \\\n",
-       "F1                                                                      \n",
-       "245  Sea of Japan or East Sea              1000.0           Confirmed   \n",
-       "\n",
-       "    Test Outcome  Year  Month_Number Month  # of Test  YYYYMM  Frequencies  \n",
-       "F1                                                                          \n",
-       "245      Success  2023             4   Apr          1  202304            1  "
-      ]
-     },
-     "execution_count": 95,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.sort_index().tail(1)\n"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -329,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 200,
    "metadata": {},
    "outputs": [
     {
@@ -483,7 +373,7 @@
        "35       Success  2013             5   May          1  201305           26  "
       ]
      },
-     "execution_count": 104,
+     "execution_count": 200,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3137,7 +3027,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 202,
    "metadata": {},
    "outputs": [
     {
@@ -3162,9 +3052,10 @@
     "merged_df = pd.merge(year_chart_df, grouped_total_num, how='left', on='Year')\n",
     "merged_df['# of Test'] = merged_df['# of Test'].fillna(0)\n",
     "# Frequencie and Month_Number are not neccessary for this chart. Therefore, dropped those\n",
-    "merged_df.drop(columns=['Frequencies', 'Month_Number'])\n",
+    "#merged_df.drop(columns=['Frequencies', 'Month_Number'])\n",
     "# Create a gradient color palette using seaborn's light_palette()\n",
-    "n_colors = len(merged_df)  # Number of colors in the palette (one for each year)\n",
+    "n_colors = len(merged_df)  \n",
+    "# Number of colors in the palette (one for each year)\n",
     "gradient_palette = sns.dark_palette(\"red\", n_colors=n_colors)\n",
     "# Create the bar chart with the gradient color palette\n",
     "plt.figure(figsize=(16, 9))\n",
@@ -3174,9 +3065,11 @@
     "plt.gca().spines['top'].set_visible(False)\n",
     "plt.gca().spines['left'].set_visible(True)\n",
     "plt.gca().spines['bottom'].set_visible(True)\n",
+    "# Set x-axis label and title\n",
+    "plt.xlabel(xlabel=None, fontsize=15)\n",
+    "plt.ylabel('Number of Test', fontsize=15)\n",
+    "plt.title('DPRK Missile Test Count by Year', fontsize=15)\n",
     "plt.xticks(rotation=45)\n",
-    "\n",
-    "\n",
     "\n",
     "\n",
     "# Below lines are not essential elements for this chart. But these helps visualization.\n",
@@ -3201,10 +3094,6 @@
     "plt.text(0.8, 65,'Kim, Il-sung\\nDPRK Founder\\n1966-1994', fontsize=12, color='black')\n",
     "plt.text(13, 65, 'Kim, Jong-il\\n1st Successor\\n1994-2011', fontsize=12, color='black')\n",
     "plt.text(30, 65, 'Kim, Jong-un\\n2nd Successor\\n2011-Today', fontsize=12, color='black')\n",
-    "# Set x-axis label and title\n",
-    "plt.xlabel(xlabel=None, fontsize=15)\n",
-    "plt.ylabel('Number of Test', fontsize=15)\n",
-    "plt.title('DPRK Missile Test Count by Year', fontsize=15)\n",
     "# First comment & line descriptions\n",
     "x1 = 0\n",
     "y1 = merged_df.loc[0, '# of Test']\n",
@@ -3380,6 +3269,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Fourth plot: Average and maximum distance travelled by year"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 157,
    "metadata": {},
@@ -3437,6 +3333,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Fifth plot: Number of missile test by missile type"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 156,
    "metadata": {},
@@ -3453,6 +3356,7 @@
     }
    ],
    "source": [
+    "# This color is color-blind friendly\n",
     "colors = plt.cm.GnBu(np.linspace(0, 1, 10))\n",
     "\n",
     "# Stacked graph for number of test by year\n",
@@ -3580,8 +3484,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Sixth plot: missile landing locations"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 199,
    "metadata": {},
    "outputs": [
     {
@@ -3723,7 +3634,7 @@
         }
        ],
        "layout": {
-        "height": 800,
+        "height": 700,
         "legend": {
          "itemsizing": "constant",
          "title": {
@@ -3750,8 +3661,8 @@
          "zoom": 2.3
         },
         "margin": {
-         "b": 1,
-         "l": 3,
+         "b": 5,
+         "l": 5,
          "r": 0,
          "t": 45
         },
@@ -4580,7 +4491,7 @@
          "x": 0.5,
          "xanchor": "center"
         },
-        "width": 1300
+        "width": 1200
        }
       }
      },
@@ -4610,11 +4521,11 @@
     "map_fig2 = px.scatter_mapbox(df_locations, lat='Latitude', lon='Longitude', hover_name='Location',\n",
     "                             color='Location', size='Count', size_max=30,  \n",
     "                             zoom=2.3, center={'lat': 36.99233273149936, 'lon': -175.65753675093146},\n",
-    "                             width=1300, height=800, title='DPRK Missile Landing Locations')\n",
+    "                             width=1200, height=700, title='DPRK Missile Landing Locations')\n",
     "# Additional layout changes - Not neccessary\n",
     "map_fig2.update_layout(title=dict(x=0.5, xanchor='center'))\n",
     "map_fig2.update_layout(mapbox_style=\"carto-darkmatter\", title_font_size=25, title_font_family=\"Courier New\")\n",
-    "map_fig2.update_layout(margin=dict(t=45, l=3, r=0, b=1))\n",
+    "map_fig2.update_layout(margin=dict(t=45, l=5, r=0, b=5))\n",
     "\n",
     "map_fig2.show()"
    ]
