Bar color changed

--- a/src/missile_type.ipynb
+++ b/src/missile_type.ipynb
@@ -69,9 +69,6 @@
     }
    ],
    "source": [
-    "# This color is color-blind friendly\n",
-    "colors = plt.cm.GnBu(np.linspace(0, 1, 10))\n",
-    "\n",
     "# Stacked graph for number of test by year\n",
     "fig, ax = plt.subplots(figsize=(18, 10))\n",
     "# Creating a pivot table with three columns. Sum the # of tests\n",
@@ -79,7 +76,7 @@
     "# To order it properly, setting the index backwards\n",
     "pivot_table = pivot_table.iloc[::-1] \n",
     "# Configure the plot\n",
-    "pivot_table.plot(kind='barh', stacked=True, ax=ax,width=0.8, cmap='cividis')\n",
+    "pivot_table.plot(kind='barh', stacked=True, ax=ax,width=0.8, cmap='plasma')\n",
     "plt.xlabel('Number of test', size='15')\n",
     "plt.ylabel('Year', size='15')\n",
     "plt.title('Number of missile tests by type (yearly)', size='16')\n",
