Updated master notebook

--- a/notebooks/dprk_missile_stats.ipynb
+++ b/notebooks/dprk_missile_stats.ipynb
@@ -2937,7 +2937,7 @@
     "# Merge the year_chart_df with the grouped DataFrame to fill missing years with 0 test counts\n",
     "merged_df = pd.merge(year_chart_df, grouped_total_num, how='left', on='Year')\n",
     "merged_df['# of Test'] = merged_df['# of Test'].fillna(0)\n",
-    "# Create a gradient color palette using seaborn's light_palette()\n",
+    "# Create a gradient color palette using seaborn's dark_palette()\n",
     "n_colors = len(merged_df)  \n",
     "# Number of colors in the palette (one for each year)\n",
     "gradient_palette = sns.dark_palette(\"red\", n_colors=n_colors)\n",
